@@ -1,234 +1,239 @@
-package com.pham.basis.evcharging.service;
+    package com.pham.basis.evcharging.service;
 
+    import com.pham.basis.evcharging.controller.AddStationRequest;
+    import com.pham.basis.evcharging.dto.request.GetStationRequest;
+    import com.pham.basis.evcharging.dto.request.StationFilterRequest;
+    import com.pham.basis.evcharging.dto.response.AddStationResponse;
+    import com.pham.basis.evcharging.dto.response.ChargingStationDetailResponse;
+    import com.pham.basis.evcharging.dto.response.ChargingStationSummaryResponse;
+    import com.pham.basis.evcharging.model.ChargerPillar;
+    import com.pham.basis.evcharging.model.ChargingStation;
+    import com.pham.basis.evcharging.model.Connector;
+    import com.pham.basis.evcharging.model.StationReview;
+    import com.pham.basis.evcharging.repository.ChargingStationRepository;
+    import com.pham.basis.evcharging.repository.StationReviewRepository;
+    import lombok.RequiredArgsConstructor;
+    import org.springframework.stereotype.Service;
+    import org.springframework.transaction.annotation.Transactional;
 
-import com.pham.basis.evcharging.dto.request.StationFilterRequest;
-import com.pham.basis.evcharging.dto.response.ChargingStationResponse;
-import com.pham.basis.evcharging.model.ChargerPillar;
-import com.pham.basis.evcharging.model.ChargingStation;
-import com.pham.basis.evcharging.model.Connector;
-import com.pham.basis.evcharging.repository.ChargingStationRepository;
-import lombok.RequiredArgsConstructor;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
+    import java.util.*;
+    import java.util.function.Function;
 
-import java.util.*;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
+    @Service
+    @RequiredArgsConstructor
+    public class ChargingStationServiceImpl implements ChargingStationService {
 
-@Service
-@RequiredArgsConstructor
-public class ChargingStationServiceImpl implements ChargingStationService {
+        private final ChargingStationRepository stationRepo;
+        private final StationReviewRepository  stationReviewRepo;
 
-    private final ChargingStationRepository stationRepository;
+        @Override
+        @Transactional(readOnly = true)
+        public List<ChargingStationSummaryResponse> getNearbyStations(StationFilterRequest req) {
+            List<ChargingStation> stations = stationRepo.findAll();
 
-    @Override
-    @Transactional(readOnly = true)
-    public List<ChargingStationResponse> findNearbyStations(StationFilterRequest request) {
-        Double reqLat = request.getLatitude();
-        Double reqLon = request.getLongitude();
-        Double radius = request.getRadius() != null ? request.getRadius() : 5.0;
+            List<ChargingStation> filteredStations = stations.stream()
+                    .peek(s -> s.setDistance(calculateDistance(req.getLatitude(), req.getLongitude(),
+                            s.getLatitude(), s.getLongitude())))
+                    .filter(s -> s.getDistance() != null && s.getDistance() <= req.getRadius())
+                    .filter(s -> filterByConnectors(s, req.getConnectors()))
+                    .filter(s -> filterByPower(s, req.getMinPower(), req.getMaxPower()))
+                    .filter(s -> filterByPrice(s, req.getMinPrice(), req.getMaxPrice()))
+                    .filter(s -> !req.getAvailableOnly() || hasAvailablePillar(s))
+                    .sorted(getComparator(req.getSort()))
+                    .toList();
 
-        if (reqLat == null || reqLon == null) return List.of();
+            int startIndex = req.getPage() * req.getSize();
+            int endIndex = Math.min(startIndex + req.getSize(), filteredStations.size());
 
-        // Normalize requested connector types (upper-case) for case-insensitive compare
-        Set<String> wantedConnectors = Optional.ofNullable(request.getConnectors())
-                .orElse(Collections.emptyList())
-                .stream()
-                .filter(Objects::nonNull)
-                .map(String::trim)
-                .map(String::toUpperCase)
-                .collect(Collectors.toSet());
-
-        Double minPower = request.getMinPower();
-        Double maxPower = request.getMaxPower();
-        Double minPrice = request.getMinPrice();
-        Double maxPrice = request.getMaxPrice();
-        boolean filterPillarCriteria = !wantedConnectors.isEmpty() || minPower != null || maxPower != null || minPrice != null || maxPrice != null;
-
-        List<ChargingStation> stations = stationRepository.findAll();
-
-        // compute distance for each station (transient field) and filter by radius
-        Stream<ChargingStation> stream = stations.stream()
-                .peek(s -> {
-                    Double d = calculateDistance(reqLat, reqLon, s.getLatitude(), s.getLongitude());
-                    s.setDistance(d);
-                })
-                .filter(s -> s.getDistance() != null && s.getDistance() <= radius);
-
-        // apply availableOnly (station-level)
-        if (Boolean.TRUE.equals(request.getAvailableOnly())) {
-            stream = stream.filter(this::hasAvailablePillar);
+            if (startIndex >= filteredStations.size()) {
+                return List.of();
+            }
+            return filteredStations.subList(startIndex, endIndex).stream()
+                    .map(this::convertToSummaryResponse)
+                    .toList();
         }
 
-        // apply pillar-level filters: connectors / power / price
-        if (filterPillarCriteria) {
-            stream = stream.filter(s -> stationHasPillarMatchingFilters(s, wantedConnectors, minPower, maxPower, minPrice, maxPrice));
+        @Override
+        @Transactional(readOnly = true)
+        public ChargingStationDetailResponse getStationDetail(GetStationRequest request) {
+            ChargingStation station = stationRepo.findById(request.getStationId())
+                    .orElseThrow(() -> new RuntimeException("Station not found"));
+            if (request.getLatitude() != null && request.getLongitude() != null &&
+                    station.getLatitude() != null && station.getLongitude() != null) {
+
+                Double distance = calculateDistance(
+                        request.getLatitude(), request.getLongitude(),
+                        station.getLatitude(), station.getLongitude()
+                );
+                station.setDistance(distance);
+            }
+            return convertToDetailResponse(station);
         }
 
-        // sorting
-        Comparator<ChargingStation> comparator = Comparator.comparing(ChargingStation::getDistance, Comparator.nullsLast(Double::compareTo));
-        String sort = request.getSort() != null ? request.getSort().trim().toLowerCase() : "distance";
-        if ("price".equals(sort)) {
-            // sort by cheapest price in station (ascending)
-            comparator = Comparator.comparing(
-                    s -> getCheapestPriceAcrossPillars(s),
-                    Comparator.nullsLast(Double::compareTo)
+        private ChargingStationSummaryResponse convertToSummaryResponse(ChargingStation s) {
+            List<ChargerPillar> pillars = Optional.ofNullable(s.getPillars()).orElse(List.of());
+
+            int total = pillars.size();
+            int available = (int) pillars.stream()
+                    .filter(p -> "Available".equalsIgnoreCase(p.getStatus()))
+                    .count();
+
+            List<String> connectorTypes = pillars.stream()
+                    .flatMap(p -> Optional.ofNullable(p.getConnectors()).orElse(List.of()).stream())
+                    .map(Connector::getType)
+                    .filter(Objects::nonNull)
+                    .distinct()
+                    .toList();
+
+            Double minPrice = pillars.stream().map(ChargerPillar::getPricePerKwh).filter(Objects::nonNull).min(Double::compareTo).orElse(null);
+            Double maxPrice = pillars.stream().map(ChargerPillar::getPricePerKwh).filter(Objects::nonNull).max(Double::compareTo).orElse(null);
+            Double minPower = pillars.stream().map(ChargerPillar::getPower).filter(Objects::nonNull).min(Double::compareTo).orElse(null);
+            Double maxPower = pillars.stream().map(ChargerPillar::getPower).filter(Objects::nonNull).max(Double::compareTo).orElse(null);
+
+            return new ChargingStationSummaryResponse(
+                    s.getId(),
+                    s.getName(),
+                    s.getAddress(),
+                    s.getLatitude(),
+                    s.getLongitude(),
+                    s.getDistance(),
+                    available > 0 ? "Available" : "Occupied",
+                    available,
+                    total,
+                    minPrice,
+                    maxPrice,
+                    minPower,
+                    maxPower,
+                    connectorTypes
             );
-        } else if ("power".equals(sort)) {
-            // sort by max power across pillars (descending)
-            comparator = Comparator.comparing(
-                    (ChargingStation s) -> getMaxPowerAcrossPillars(s),
-                    Comparator.nullsLast(Double::compareTo)
-            ).reversed();
         }
 
-        List<ChargingStationResponse> results = stream
-                .sorted(comparator)
-                .map(this::convertToResponse)
-                .collect(Collectors.toList());
+        private ChargingStationDetailResponse convertToDetailResponse(ChargingStation s) {
+            List<ChargingStationDetailResponse.PillarDto> pillarDtos = Optional.ofNullable(s.getPillars())
+                    .orElse(List.of())
+                    .stream()
+                    .map(p -> new ChargingStationDetailResponse.PillarDto(
+                            p.getCode(),
+                            p.getStatus(),
+                            p.getPower(),
+                            p.getPricePerKwh(),
+                            Optional.ofNullable(p.getConnectors()).orElse(List.of())
+                                    .stream()
+                                    .map(c -> new ChargingStationDetailResponse.ConnectorDto(c.getId(), c.getType()))
+                                    .toList()
+                    ))
+                    .toList();
 
-        // pagination
-        int page = request.getPage() != null ? request.getPage() : 0;
-        int size = request.getSize() != null ? request.getSize() : 10;
-        int start = page * size;
-        if (start >= results.size()) return List.of();
-        int end = Math.min(start + size, results.size());
-        return results.subList(start, end);
-    }
+            List<ChargingStationDetailResponse.ReviewDto> reviewDtos = stationReviewRepo
+                    .findByChargingStationIdOrderByCreatedAtDesc(s.getId())
+                    .stream()
+                    .map(this::convertToReviewDto)
+                    .toList();
 
-    /** Helper: station has at least one pillar that matches pillar-level criteria:
-     *  - connector types (if wantedConnectors non-empty)
-     *  - power within min/max (if provided)
-     *  - price per kwh within min/max (if provided)
-     */
-    private boolean stationHasPillarMatchingFilters(ChargingStation station,
-                                                    Set<String> wantedConnectors,
-                                                    Double minPower, Double maxPower,
-                                                    Double minPrice, Double maxPrice) {
-        List<ChargerPillar> pillars = Optional.ofNullable(station.getPillars()).orElse(Collections.emptyList());
-        for (ChargerPillar p : pillars) {
-            if (p == null) continue;
-
-            // power check
-            if (minPower != null && (p.getPower() == null || p.getPower() < minPower)) continue;
-            if (maxPower != null && (p.getPower() == null || p.getPower() > maxPower)) continue;
-
-            // price check
-            if (minPrice != null && (p.getPricePerKwh() == null || p.getPricePerKwh() < minPrice)) continue;
-            if (maxPrice != null && (p.getPricePerKwh() == null || p.getPricePerKwh() > maxPrice)) continue;
-
-            // connector check: if wantedConnectors empty -> accept
-            if (wantedConnectors.isEmpty()) {
-                return true; // this pillar satisfies power/price (connectors not required)
-            }
-
-            List<Connector> connectors = Optional.ofNullable(p.getConnectors()).orElse(Collections.emptyList());
-            for (Connector c : connectors) {
-                if (c == null || c.getType() == null) continue;
-                String t = c.getType().trim().toUpperCase();
-                if (wantedConnectors.contains(t)) {
-                    return true;
-                }
-            }
-            // this pillar didn't match connector requirement -> try next pillar
+            return new ChargingStationDetailResponse(
+                    s.getId(),
+                    s.getName(),
+                    s.getAddress(),
+                    s.getLatitude(),
+                    s.getLongitude(),
+                    s.getDistance(),
+                    s.getStatus(),
+                    (int) pillarDtos.stream().filter(p -> "Available".equalsIgnoreCase(p.getStatus())).count(),
+                    pillarDtos.size(),
+                    getMin(pillarDtos, ChargingStationDetailResponse.PillarDto::getPricePerKwh),
+                    getMax(pillarDtos, ChargingStationDetailResponse.PillarDto::getPricePerKwh),
+                    getMin(pillarDtos, ChargingStationDetailResponse.PillarDto::getPower),
+                    getMax(pillarDtos, ChargingStationDetailResponse.PillarDto::getPower),
+                    pillarDtos,
+                    reviewDtos
+            );
         }
-        return false;
-    }
+        private ChargingStationDetailResponse.ReviewDto convertToReviewDto(StationReview review) {
+            String userName = review.getUser() != null
+                    ? review.getUser().getFull_name()
+                    : "Anonymous User";
 
-    /** Helper: get cheapest price across station's pillars (nullable) */
-    private Double getCheapestPriceAcrossPillars(ChargingStation s) {
-        return Optional.ofNullable(s.getPillars()).orElse(Collections.emptyList()).stream()
-                .map(ChargerPillar::getPricePerKwh)
-                .filter(Objects::nonNull)
-                .min(Double::compareTo)
-                .orElse(null);
-    }
+            return new ChargingStationDetailResponse.ReviewDto(
+                    review.getId().toString(),
+                    userName,
+                    review.getRating(),
+                    review.getComment(),
+                    review.getCreatedAt().toString()
+            );
+        }
 
-    /** Helper: get max power across station's pillars (nullable) */
-    private Double getMaxPowerAcrossPillars(ChargingStation s) {
-        return Optional.ofNullable(s.getPillars()).orElse(Collections.emptyList()).stream()
-                .map(ChargerPillar::getPower)
-                .filter(Objects::nonNull)
-                .max(Double::compareTo)
-                .orElse(null);
-    }
+        private <T extends Number> Double getMin(List<ChargingStationDetailResponse.PillarDto> list, Function<ChargingStationDetailResponse.PillarDto, T> fn) {
+            return list.stream().map(fn).filter(Objects::nonNull).mapToDouble(Number::doubleValue).min().orElse(Double.NaN);
+        }
 
-    //Kiểm tra có ít nhất 1 pillar available
-    private boolean hasAvailablePillar(ChargingStation station) {
-        List<ChargerPillar> pillars = Optional.ofNullable(station.getPillars()).orElse(Collections.emptyList());
-        return pillars.stream().anyMatch(p->p.getStatus()!= null && p.getStatus().equalsIgnoreCase("Available"));
-    }
+        private <T extends Number> Double getMax(List<ChargingStationDetailResponse.PillarDto> list, Function<ChargingStationDetailResponse.PillarDto, T> fn) {
+            return list.stream().map(fn).filter(Objects::nonNull).mapToDouble(Number::doubleValue).max().orElse(Double.NaN);
+        }
 
-    // Tính khoảng cách bằng Haversine (trả null nếu bất kỳ input nào null)
-    public Double calculateDistance(Double lat1, Double lon1, Double lat2, Double lon2) {
-        if (lat1 == null || lon1 == null || lat2 == null || lon2 == null) {
+        private boolean filterByConnectors(ChargingStation s, List<String> connectors) {
+            if (connectors == null || connectors.isEmpty()) return true;
+            return s.getPillars().stream()
+                    .flatMap(p -> Optional.ofNullable(p.getConnectors()).orElse(List.of()).stream())
+                    .map(Connector::getType)
+                    .anyMatch(connectors::contains);
+        }
+
+        private boolean filterByPower(ChargingStation s, Double min, Double max) {
+            return s.getPillars().stream().anyMatch(p ->
+                    (min == null || p.getPower() >= min) &&
+                            (max == null || p.getPower() <= max)
+            );
+        }
+
+        private boolean filterByPrice(ChargingStation s, Double min, Double max) {
+            return s.getPillars().stream().anyMatch(p ->
+                    (min == null || p.getPricePerKwh() >= min) &&
+                            (max == null || p.getPricePerKwh() <= max)
+            );
+        }
+
+        private boolean hasAvailablePillar(ChargingStation s) {
+            return s.getPillars().stream().anyMatch(p -> "Available".equalsIgnoreCase(p.getStatus()));
+        }
+
+        private Comparator<ChargingStation> getComparator(String sort) {
+            return Comparator.comparingDouble(ChargingStation::getDistance);
+        }
+
+        private double getMinPrice(ChargingStation s) {
+            return s.getPillars().stream()
+                    .map(ChargerPillar::getPricePerKwh)
+                    .filter(Objects::nonNull)
+                    .min(Double::compareTo)
+                    .orElse(Double.MAX_VALUE);
+        }
+
+        private double getMaxPower(ChargingStation s) {
+            return s.getPillars().stream()
+                    .map(ChargerPillar::getPower)
+                    .filter(Objects::nonNull)
+                    .max(Double::compareTo)
+                    .orElse(Double.MIN_VALUE);
+        }
+
+        @Override
+        public Double calculateDistance(Double lat1, Double lon1, Double lat2, Double lon2) {
+            if (lat1 == null || lon1 == null || lat2 == null || lon2 == null) {
+                return null;
+            }
+            final int R = 6371;
+            double latDistance = Math.toRadians(lat2 - lat1);
+            double lonDistance = Math.toRadians(lon2 - lon1);
+            double a = Math.sin(latDistance / 2) * Math.sin(latDistance / 2)
+                    + Math.cos(Math.toRadians(lat1)) * Math.cos(Math.toRadians(lat2))
+                    * Math.sin(lonDistance / 2) * Math.sin(lonDistance / 2);
+            double c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
+            double distance = R * c;
+            return Math.round(distance * 100.0) / 100.0;
+        }
+
+        @Override
+        public AddStationResponse addStation(String userName, AddStationRequest request) {
             return null;
         }
-        final int R = 6371; // km
-        double latDistance = Math.toRadians(lat2 - lat1);
-        double lonDistance = Math.toRadians(lon2 - lon1);
-        double sinLat = Math.sin(latDistance / 2);
-        double sinLon = Math.sin(lonDistance / 2);
-        double a = sinLat * sinLat
-                + Math.cos(Math.toRadians(lat1)) * Math.cos(Math.toRadians(lat2)) * sinLon * sinLon;
-        double tmp = Math.min(1.0, Math.max(-1.0, Math.sqrt(a)));
-        double c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(Math.max(0.0, 1 - a)));
-
-        return R * c;
     }
-
-
-    public ChargingStationResponse convertToResponse(ChargingStation station) {
-        // Guard null pillars
-        List<ChargerPillar> pillars = Optional.ofNullable(station.getPillars()).orElse(Collections.emptyList());
-
-        int totalPillars = pillars.size();
-        int availablePillars = (int) pillars.stream()
-                .filter(p -> p.getStatus() != null && p.getStatus().equalsIgnoreCase("Available"))
-                .count();
-
-        // connectors: distinct types across all pillars
-        List<String> connectorTypes = pillars.stream()
-                .flatMap(p -> Optional.ofNullable(p.getConnectors()).orElse(Collections.emptyList()).stream())
-                .map(Connector::getType)
-                .filter(Objects::nonNull)
-                .distinct()
-                .collect(Collectors.toList());
-
-        // cheapest price across pillars (nullable)
-        Double cheapest = pillars.stream()
-                .map(ChargerPillar::getPricePerKwh)
-                .filter(Objects::nonNull)
-                .min(Double::compareTo)
-                .orElse(null);
-
-        // max power across pillars (nullable)
-        Double maxPower = pillars.stream()
-                .map(ChargerPillar::getPower)
-                .filter(Objects::nonNull)
-                .max(Double::compareTo)
-                .orElse(null);
-
-        // Format fields to match frontend expectations (strings)
-        String powerStr = (maxPower != null) ? String.format("%.0f kW", maxPower) : null;
-        String availableStr = totalPillars > 0 ? String.format("%d/%d available", availablePillars, totalPillars) : null;
-        String priceStr = (cheapest != null) ? String.format("%.2f /kWh", cheapest) : null;
-
-        return new ChargingStationResponse(
-                station.getId(),
-                station.getName(),
-                station.getAddress(),
-                station.getLatitude(),
-                station.getLongitude(),
-                station.getDistance(),
-                station.getStatus(),
-                powerStr,
-                availableStr,
-                connectorTypes.isEmpty() ? null : connectorTypes,
-                priceStr
-        );
-    }
-
-
-
-}
